# ocl

./: CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: release.yaml
demo/: quickstart.tape
ocl/: __main__.py  cluster.gql  cluster.py
ocl/gql_definitions/: clusters.py  namespaces.gql  namespaces.py
ocl/gql_definitions/fragments/: cluster.gql  cluster.py
openshift_cluster_login/: __main__.py  ui.py
openshift_cluster_login/gql_definitions/: clusters.gql  clusters.py  namespaces.gql  namespaces.py
openshift_cluster_login/gql_definitions/fragments/: cluster.gql  cluster.py
