[tool.poetry]
name = "openshift-cluster-login"
version = "0.12.3"
description = "Openshift cluster login on command line"
authors = ["Christian Assing <cassing@redhat.com>"]
license = "MIT"
readme = "README.md"
repository = "http://github.com/chassing/ocl"
packages = [{ include = "ocl" }]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
selenium = "^4.3.0"
iterfzf = "^0.5.0"
requests = "^2.28.1"
typer = "^0.6.1"
rich = "^12.5.1"
appdirs = "^1.4.4"
pydantic = "^1.9.2"
"flufl.lock" = "^7.1.1"
diskcache = "^5.4.0"
playwright = "^1.28.0"

[tool.poetry.dev-dependencies]
types-requests = "^2.28.7"
flake8 = "^5.0.3"
mypy = "^0.971"
qenerate = "^0.1.2"

[tool.poetry.group.dev.dependencies]
reorder-python-imports = "^3.9.0"
isort = "^5.11.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ocl = 'ocl.__main__:app'

[tool.black]
line-length = 88
target-version = ['py311']
include = '^.*\.py$'

[tool.isort]
profile = "black"
multi_line_output = 3
force_grid_wrap = 2
float_to_top = true
