[tool.poetry]
name = "openshift-cluster-login"
version = "1.0.2"
description = "Openshift cluster login on command line"
authors = ["Christian Assing <cassing@redhat.com>"]
license = "MIT"
readme = "README.md"
repository = "http://github.com/chassing/ocl"
packages = [{ include = "ocl" }]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
iterfzf = "^1.1.0.44.0"
requests = "^2.28.1"
typer = "^0.6.1"
rich = "^12.5.1"
appdirs = "^1.4.4"
pydantic = "^1.9.2"
"flufl.lock" = "^7.1.1"
diskcache = "^5.4.0"
requests-kerberos = "^0.14.0"
pyquery = "^2.0.0"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.28.7"
pyjwt = "^2.8.0"
ruff = "^0.1.11"
mypy = "^1.8.0"
qenerate = "^0.6.3"
setuptools = "^69.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ocl = 'ocl.__main__:app'

[tool.ruff]
line-length = 88
target-version = 'py311'
required-version = "0.1.11"

src = ["ocl"]
extend-exclude = ["ocl/gql_definitions"]
fix = true

[tool.ruff.lint]
preview = true

# defaults are ["E4", "E7", "E9", "F"]
extend-select = [
    # flake8 default rules
    "E1", # preview rule
    "E2", # preview rule
    "W",
    # isort
    "I",
    # pylint
    "PL",
]
ignore = [
    "PLR0913", # Too many arguments
    "PLR0917", # Too many positional arguments
]
[tool.ruff.format]
preview = true

[tool.ruff.lint.isort]
known-first-party = ["ocl"]

[[tool.mypy.overrides]]
# Below are all of the packages that don't implement stub packages. Mypy will throw an error if we don't ignore the
# missing imports. See: https://mypy.readthedocs.io/en/stable/running_mypy.html#missing-imports
module = ["appdirs.*", "diskcache.*", "pyquery.*", "requests_kerberos.*"]
ignore_missing_imports = true
