[project]
name = "openshift-cluster-login"
version = "1.2.2"
description = "Openshift cluster login on command line"
authors = [{ name = "Christian Assing", email = "chris@ca-net.org" }]
license = { text = "MIT License" }
readme = "README.md"
requires-python = ">= 3.11"
dependencies = [
    "appdirs>=1.4.4",
    # https://github.com/fastapi/typer/pull/1145
    "click==8.1.0",
    "diskcache>=5.6.3",
    "flufl-lock>=8.1.0",
    "iterfzf>=1.4.0.54.3",
    "pydantic>=2.8.2",
    "pyquery>=2.0.0",
    "requests-kerberos>=0.15.0",
    "requests>=2.32.3",
    "rich>=13.7.1",
    "typer>=0.12.5",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: System Shells",
    "Topic :: System :: Systems Administration",
    "Topic :: Terminals :: Terminal Emulators/X Terminals",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
[project.urls]
homepage = "http://github.com/chassing/ocl"
respository = "http://github.com/chassing/ocl"
issues = "http://github.com/chassing/ocl/issues"

[tool.uv]
dev-dependencies = [
    "types-requests",
    "pyjwt",
    "ruff",
    "mypy",
    "qenerate",
    "setuptools>=73.0.1",
]

[project.scripts]
ocl = 'openshift_cluster_login.__main__:app'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["openshift_cluster_login"]

[tool.ruff]
line-length = 88
target-version = 'py311'
src = ["openshift_cluster_login"]
extend-exclude = ["openshift_cluster_login/gql_definitions"]
fix = true

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "ANN401",
    "ARG001",  # Unused argument
    "ARG002",  # Unused argument
    "CPY",     # Missing copyright header
    "D10",     # Missing docstring in XXX
    "D203",    # 1 blank line required before class docstring
    "D211",    # No blank lines allowed before class docstring
    "D212",    # multi-line-summary-first-line
    "D213",    # multi-line-summary-second-line
    "D4",      # Doc string style
    "E501",    # Line too long
    "EM",      # error message in exceptions
    "G004",    # Logging statement uses string formatting
    "PD",      # no pandas please
    "PLC0415", # `import` should be at the top-level of a file
    "PLR0904", # Too many public methods
    "PLR0913", # Too many arguments
    "PLR0917", # Too many positional arguments
    "PLR6301", # no self-ussage
    "S101",    # Use of assert detected. Pytest uses assert
    "S404",    # subprocess import
    "S602",    # subprocess check
    "S603",    # subprocess check for execution of untrusted input
    "S604",    # subprocess shell=True
    "TRY003",  # Avoid specifying long messages outside the exception class
    "TRY300",  # try-consider-else
    # pydoclint
    "DOC",
    # May conflict with the formatter, https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q",
    "COM812",
    "COM819",
    "ISC001",
]

[tool.ruff.format]
preview = true

[tool.ruff.lint.isort]
known-first-party = ["openshift_cluster_login"]

[tool.mypy]
files = ["openshift_cluster_login"]
plugins = ["pydantic.mypy"]
enable_error_code = ["truthy-bool", "redundant-expr"]
no_implicit_optional = true
check_untyped_defs = true
warn_unused_ignores = true
show_error_codes = true
disallow_untyped_defs = true
disallow_incomplete_defs = true


[[tool.mypy.overrides]]
# Below are all of the packages that don't implement stub packages. Mypy will throw an error if we don't ignore the
# missing imports. See: https://mypy.readthedocs.io/en/stable/running_mypy.html#missing-imports
module = [
    "appdirs.*",
    "diskcache.*",
    "pyquery.*",
    "requests_kerberos.*",
    "iterfzf.*",
]
ignore_missing_imports = true
